rametto si scosta dal progetto

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 
 <p>i due rami si sono accordati per mandare un asino piu' veloce della luce</p>
 <p>guerra scampata</p>
+<p>mentre i due rami si sono riuniti per festeggiare nasce una nuova voce nel nulla</p>
+<p>Rametto opera nel buio e verra' ignorato da tutti</p>
+
+
 </body>
 
 
