punto della situazione

--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
 <p>guerra scampata</p>
 <p>mentre i due rami si sono riuniti per festeggiare nasce una nuova voce nel nulla</p>
 <p>Rametto opera nel buio e verra' ignorato da tutti</p>
-
+Tutto procede secondo un ben preciso caos
 
 </body>
-
-
